[package]
name = "egui_colorimage_gradients"
authors = ["Perzium"]
description = "Wanted gradients in your ColorImage? Now you get it!"
version = "0.2.1"

edition = "2024"
license = "MIT"

repository = "https://github.com/Perzium/egui_colorimage_gradients"
readme = "README.md"

keywords = ["egui", "colorimage", "gradients"]
categories = ["gui", "visualization"]


[dependencies]
egui = ">=0.27.0"
serde = { version = "1.0", features = ["derive"], optional = true }


[features]
# For Serialization
serde = ["dep:serde"]

# For people who don't have egui::Direction;
below_egui_0_34_0 = []

# Self-explanatory
default = []

# Includes presets
presets = []


[package.metadata.docs.rs]
# Fixing rustdoc errors
all-features = true
rustdoc-args = ["--cfg", "docsrs"]